--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -19,22 +19,60 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'PressStart2P';
+  src: url('./../fonts/pixel/PressStart2P.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+.footer {
+  width: 100%;
+  margin-top: calc(1vw + 1vh + 88.5vmin); 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+a:hover {
+  color: #fff;
+}
+
+.git img {
+  width: 25px;
+  filter: invert(80%);
+}
+
+
+.git img:hover {
+  filter: invert(100%);
+}
+
+.git {
+  margin: 0 0 0 10px;
+}
+
+.span1 {
+  font-family: 'PressStart2P';
+  color: rgb(189, 189, 189);
+  font-size: 16px;
+}
 
 .canvas {
   /* image-rendering: pixelated; */
-  width: calc(1vw + 1vh + 150vmin);
-  height: calc(1vw + 1vh + 95vmin); 
+  width: calc(1vw + 1vh + 124vmin);
+  height: calc(1vw + 1vh + 79vmin); 
   background-color: rgb(0, 0, 0);	
   }
 
   .canvas2 {
     width: calc(1vw + 1vh + 30vmin);
-    height: calc(1vw + 1vh + 95vmin); 
+    height: calc(1vw + 1vh + 85vmin); 
     background-color: rgb(255, 255, 255);	
   }
   .canvas3 {
     width: 0px;
-    height: calc(1vw + 1vh + 95vmin); 
+    height: calc(1vw + 1vh + 85vmin); 
     background-color: rgb(255, 255, 255);	
   }
 
@@ -64,4 +102,13 @@ body {
   transform: scale(-1, 1);
   filter: FlipH;
 }
+
+
+
+
+
+
+
+
+
 
